<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hui">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_lookall"
        android:text="@string/lookall"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_looklouzhu"
        android:text="@string/looklouzhu"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <TextView

        android:gravity="center"
        android:text="@string/lookdoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_lookdoctor"
        android:layout_weight="1"/>


</LinearLayout>