<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="cn.gem.mydoctor.HintActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_themehint"
        android:background="@color/colorTitle">
    </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/ll_me"
            android:layout_below="@+id/toolbar_themehint">
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton

                    android:textSize="16dp"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rb_answerme"
                    android:text="@string/answerme"
                    android:layout_weight="1"/>
                <RadioButton
                    android:textSize="16dp"
                    android:text="@string/pinglunme"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rb_pinglunme"
                    android:layout_weight="1"/>
                <RadioButton
                    android:textSize="16dp"
                    style="@style/radioButton"
                    android:text="@string/guanyume"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rb_guanyume"
                    android:layout_weight="1"/>
            </RadioGroup>


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/ll_me"
        android:id="@+id/ll_im2">


    <ImageView
        android:id="@+id/img2"
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:background="#33b5e5"
    />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_themehint"
        android:layout_below="@+id/ll_im2"/>


</RelativeLayout>
